# flask-lookbook

./: .bandit  .cursorrules  .gitignore  .pre-commit-config.yaml  .ruff.toml  ANALYSIS.md  CI_IMPROVEMENTS.md  CODE_QUALITY.md  Makefile  README.md  TESTING_IMPROVEMENTS.md  app.py  config.py  database.py  docker-compose.act.yml  mise.toml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirments.txt  ruff.toml  utils.py
.github/workflows/: azure-static-web-apps-mango-pebble-087f26403.yml  ci.yml
routes/: auth.py  contact.py  main.py  media_handler.py
scripts/: act.sh  check.sh  check_outdated.py
templates/: about.html  admin.html  clothes.html  contact.html  home.html  index.html  inspiration.html  layout.html  login.html  register.html
tests/: README.md  conftest.py  r2_test.py  test_auth.py  test_config.py  test_contact.py  test_database.py  test_main.py  test_utils.py
